Inserção de algumas imagens e start do projeto

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="hero">
-        
+        <img src="assets/HORIZONTAL SITE.webp" alt="">
     </div>
 </body>
 </html>
