Estruturação do site concluída

--- a/index.html
+++ b/index.html
@@ -3,11 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MUDE - Glacielle Garcia</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="hero">
         <img src="assets/HORIZONTAL SITE.webp" alt="">
     </div>
+    <section class="o-que-e">
+        <h2>O que é o MUDE?</h2>
+        <h4>MUDE é para quem está pronto para romper padrões.</h4>
+        <p>Um treinamento que já transformou a vida de milhares de homens e mulheres.<br>Nessa edição especial, o manifesto se expande com a integração dos homens.</p>
+        <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Chegou sua hora?</a>
+    </section>
+    <section class="creator">
+        <h2>Quem Criou o MUDE?</h2>
+       <h4>A idealizadora do MUDE é Glacielle Garcia Rocha.</h4>
+       <p>Empresária e treinadora, tem como missão desbloquear suas linhas imaginárias e te levar à liberdade em todas as áreas da vida.<br>Mentora de experts, empresários, terapeutas e médicos.<br>Mãe de dois embaixadores do Reino: João Garcia e Manu – que também criam métodos que impactam vidas.</p>
+    </section>
+    <section class="para-quem">
+        <h2>Para quem é o MUDE DESPERTAR?</h2>
+        <h4>Este treinamento é para você que:</h4>
+        <p> ✔ É empresário ou profissional liberal<br>
+            ✔ Busca romper padrões emocionais e comportamentais<br>
+            ✔ Quer aumentar seu lucro com mais leveza<br>
+            ✔ Está pronto para liderar com liberdade<br>
+        </p>
+    </section>
+    <section class="como">
+        <h2>Como funciona o MUDE?</h2>
+        <h4>2 dias de desbloqueio e integração.</h4>
+        <p>Você vai acessar suas forças femininas e masculinas a partir da sua história.<br>
+            Com ferramentas, dinâmicas e posicionamento magnético, você descobrirá um novo jeito de se mover no mundo.</p>
+    </section>
+    <section class="encontrar">
+        <h2>O que você vai encontrar lá?</h2>
+        <h4>Um ambiente de transformação real.</h4>
+        <p>Acolhimento com verdade<br>
+           Conteúdos práticos<br>
+           Dinâmicas sistêmicas profundas<br>
+           Metodologia que te tira do automático
+        </p>
+        <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Chegou sua hora?</a>
+    </section>
+    <section class="onde">
+        <h2>Onde e quando será?</h2>
+        <h4>MUDE DESPERTAR – 10ª edição</h4>
+        <p>📍 Hotel Lenea – Belo Horizonte/MG
+📅 19 e 20 de Outubro
+⏱ 24h de treinamento de alta performance</p>
+    </section>
+    <section class="cta">
+        <h2>Chamada final</h2>
+        <h4>Garanta seu passaporte agora!</h4>
+        <p>💥 De R$497 por apenas R$197 até 20/08<br>🎟 Vagas limitadas</p>
+    </section>
 </body>
 </html>
