Início da estilização

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MUDE - Glacielle Garcia</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 <body>
     <div class="hero">
@@ -44,7 +45,7 @@
            Dinâmicas sistêmicas profundas<br>
            Metodologia que te tira do automático
         </p>
-        <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Chegou sua hora?</a>
+        <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Pronto para mergulhar?</a>
     </section>
     <section class="onde">
         <h2>Onde e quando será?</h2>
@@ -57,6 +58,7 @@
         <h2>Chamada final</h2>
         <h4>Garanta seu passaporte agora!</h4>
         <p>💥 De R$497 por apenas R$197 até 20/08<br>🎟 Vagas limitadas</p>
+        <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Quero meu passaporte</a>
     </section>
 </body>
 </html>
