Estilização concluída para grandes telas

--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
     <section class="encontrar">
         <h2>O que você vai encontrar lá?</h2>
         <h4>Um ambiente de transformação real.</h4>
-        <p>Acolhimento com verdade<br>
-           Conteúdos práticos<br>
-           Dinâmicas sistêmicas profundas<br>
-           Metodologia que te tira do automático
+        <p>&check; Acolhimento com verdade<br>
+           &check; Conteúdos práticos<br>
+           &check; Dinâmicas sistêmicas profundas<br>
+           &check; Metodologia que te tira do automático
         </p>
         <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Pronto para mergulhar?</a>
     </section>
     <section class="onde">
         <h2>Onde e quando será?</h2>
         <h4>MUDE DESPERTAR – 10ª edição</h4>
-        <p>📍 Hotel Lenea – Belo Horizonte/MG
-📅 19 e 20 de Outubro
+        <p>📍 Hotel Linea – Belo Horizonte/MG |  <a href="https://maps.app.goo.gl/sy6ut6WSmbGc6q3LA">Como Chegar?</a> | 
+📅 19 e 20 de Outubro | 
 ⏱ 24h de treinamento de alta performance</p>
     </section>
     <section class="cta">
