Reajuste do mobile

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         <h2>O que é o MUDE?</h2>
         <h4>MUDE é para quem está pronto para romper padrões.</h4>
         <p>Um treinamento que já transformou a vida de milhares de homens e mulheres.<br>Nessa edição especial, o manifesto se expande com a integração dos homens.</p>
-        <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Chegou sua hora?</a>
+        <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Chegou sua hora!</a>
     </section>
     <section class="creator">
-        <h2>Quem Criou o MUDE?</h2>
-       <h4>A idealizadora do MUDE é Glacielle Garcia Rocha.</h4>
-       <p>Empresária e treinadora, tem como missão desbloquear suas linhas imaginárias e te levar à liberdade em todas as áreas da vida.<br>Mentora de experts, empresários, terapeutas e médicos.<br>Mãe de dois embaixadores do Reino: João Garcia e Manu – que também criam métodos que impactam vidas.</p>
+        <div class="description">
+            <h2>Quem Criou o MUDE?</h2>
+           <h4>A idealizadora do MUDE é Glacielle Garcia Rocha.</h4>
+           <p>Empresária e treinadora, tem como missão desbloquear suas linhas imaginárias e te levar à liberdade em todas as áreas da vida.<br>Mentora de experts, empresários, terapeutas e médicos.<br>Mãe de dois embaixadores do Reino: João Garcia e Manu – que também criam métodos que impactam vidas.</p>
+        </div>
     </section>
     <section class="para-quem">
         <h2>Para quem é o MUDE DESPERTAR?</h2>
