inicio na alteração do design

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
     <section class="para-quem">
         <h2>Para quem é o MUDE DESPERTAR?</h2>
         <h4>Este treinamento é para você que:</h4>
-        <p> ✔ É empresário ou profissional liberal<br>
-            ✔ Busca romper padrões emocionais e comportamentais<br>
-            ✔ Quer aumentar seu lucro com mais leveza<br>
-            ✔ Está pronto para liderar com liberdade<br>
-        </p>
+        <p> <span>✔</span> É empresário ou profissional liberal</p>
+        <p> <span>✔</span> Busca romper padrões emocionais e comportamentais</p>
+        <p> <span>✔</span> Quer aumentar seu lucro com mais leveza</p>
+        <p> <span>✔</span> Está pronto para liderar com liberdade</p>
     </section>
     <section class="como">
         <h2>Como funciona o MUDE?</h2>
@@ -63,4 +62,5 @@
         <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Quero meu passaporte</a>
     </section>
 </body>
+<script src="script.js"></script>
 </html>
