Alteração do design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="o-que-e">
         <h2>O que é o MUDE?</h2>
         <h4>MUDE é para quem está pronto para romper padrões.</h4>
-        <p>Um treinamento que já transformou a vida de milhares de homens e mulheres.<br>Nessa edição especial, o manifesto se expande com a integração dos homens.</p>
+        <p>Milhares de mulheres e nessa edição especial integramos  os homens.</p>
         <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Chegou sua hora!</a>
     </section>
     <section class="creator">
@@ -27,26 +27,32 @@
     <section class="para-quem">
         <h2>Para quem é o MUDE DESPERTAR?</h2>
         <h4>Este treinamento é para você que:</h4>
-        <p> <span>✔</span> É empresário ou profissional liberal</p>
-        <p> <span>✔</span> Busca romper padrões emocionais e comportamentais</p>
-        <p> <span>✔</span> Quer aumentar seu lucro com mais leveza</p>
-        <p> <span>✔</span> Está pronto para liderar com liberdade</p>
+        <p><span>&check;</span> É empresário(a), mentor(a), terapeuta, coach, fisioterapeuta, psicólogo(a), nutricionista, advogado(a) ou profissional liberal que já serve pessoas e sente que está pronto para ir além</p>
+        <p><span>&check;</span> Trabalha com pessoas, mas percebe que ainda carrega feridas emocionais, padrões familiares ou bloqueios inconscientes que limitam sua liberdade e seus resultados</p>
+        <p><span>&check;</span> Já estudou muito, mas ainda não sente que vive no seu potencial pleno — e quer dar o salto definitivo</p>
+        <p><span>&check;</span> Quer crescer financeiramente sem abrir mão da leveza, da verdade e da sua essência</p>
+        <p><span>&check;</span> Sabe que chegou a hora de liderar com consciência, sem se comparar, sem se sabotar e sem depender da validação externa</p>
+        <p><span>&check;</span> Deseja ressignificar a relação com pais, dinheiro, tempo, corpo, trabalho e autocobrança</p>
+        <p><span>&check;</span> Está cansado(a) de repetir ciclos — emocionais, afetivos ou profissionais — e quer romper com padrões de estagnação ou escassez</p>
+        <p><span>&check;</span> E, acima de tudo, decidiu ocupar seu lugar de força no mundo, parar de se diminuir e assumir seu lugar com coragem, clareza e autoridade</p>
     </section>
     <section class="como">
         <h2>Como funciona o MUDE?</h2>
         <h4>2 dias de desbloqueio e integração.</h4>
-        <p>Você vai acessar suas forças femininas e masculinas a partir da sua história.<br>
-            Com ferramentas, dinâmicas e posicionamento magnético, você descobrirá um novo jeito de se mover no mundo.</p>
+        <p>Prepare-se para acessar o que há de mais autêntico em você.
+Durante a Imersão MUDE, você vai integrar suas forças femininas e masculinas a partir da sua própria história — sem fórmulas prontas, sem rótulos.<br>
+Através de ferramentas práticas, dinâmicas sistêmicas e posicionamento magnético, você vai descobrir um novo jeito de se mover no mundo: com coragem, consciência e verdade.
+</p>
     </section>
     <section class="encontrar">
         <h2>O que você vai encontrar lá?</h2>
-        <h4>Um ambiente de transformação real.</h4>
-        <p>&check; Acolhimento com verdade<br>
-           &check; Conteúdos práticos<br>
-           &check; Dinâmicas sistêmicas profundas<br>
-           &check; Metodologia que te tira do automático
-        </p>
-        <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">Pronto para mergulhar?</a>
+        <h4>Um ambiente seguro e provocador, onde transformações reais acontecem:</h4>
+        <p><span>&check;</span> Acolhimento com verdade — sem máscaras</p>
+        <p><span>&check;</span> Conteúdos práticos que tocam o que trava a sua expansão</p>
+        <p><span>&check;</span> Dinâmicas sistêmicas profundas que quebram repetições inconscientes</p>
+        <p><span>&check;</span> Uma metodologia que te tira do automático e te devolve ao presente</p>
+        <a href="https://wa.me/5531973161758?text=Ol%C3%A1%2C+gostaria+de+saber+detalhes+sobre%C2%A0o%C2%A0Treinamento." target="_blank">PRONTO PARA MERGULHAR NA SUA PRÓPRIA VERDADE?</a>
+        <p>A cadeira é sua. A decisão também.</p>
     </section>
     <section class="onde">
         <h2>Onde e quando será?</h2>
