Finalização do site

--- a/index.html
+++ b/index.html
@@ -112,14 +112,7 @@ e mais do que isso: vai aprender a se comunicar a partir da sua verdade interior
         </div>
     </section>
     <section class="footer">
-        <p>
-            Glacielle Garcia Rocha
-Referência nacional em treinamentos com visão sistêmica, Glacielle é analista comportamental, psicanalista e especialista em Programação Neurolinguística (PNL), com formações Master e Practitioner.
-
-Empresária há mais de uma década, iniciou sua trajetória no setor da beleza, onde desenvolveu sua sensibilidade para lidar com emoções e padrões humanos. Desde então, já desbloqueou e transformou milhares de mentes pelo mundo com sua abordagem única que une propósito, identidade e comunicação com essência.
-
-Atualmente, lidera o Instituto Pertencer, onde forma treinadores e mentores com olhar integrativo, guiando pessoas a romper travas internas e a se posicionar com autoridade e alma.
-        </p>
+        <img src="assets/footer.webp" alt="">
     </section>
 </body>
 <script src="script.js"></script>
