--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ e mais do que isso: vai aprender a se comunicar a partir da sua verdade interior
     <section class="footer">
         <img src="assets/footer.webp" alt="">
     </section>
+    <section class="dev">
+        &copy; 2025 Todos os direitos reservados | Desenvolvido por <a href="https://wa.me/5531997451906">Marcos Túlio</a>
+    </section>
 </body>
 <script src="script.js"></script>
 <script src="https://kit.fontawesome.com/cd300ea2e4.js" crossorigin="anonymous"></script>
